infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/limit-connections: '5'
    nginx.ingress.kubernetes.io/limit-rps: '5'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/cors-allow-origin: 'http://posts.com:4200'
    nginx.ingress.kubernetes.io/cors-allow-methods: 'PUT, GET, POST, OPTIONS, DELETE, PATCH'
    nginx.ingress.kubernetes.io/cors-allow-headers: 'DNT,X-CustomHeader,X-LANG,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,X-Api-Key,X-Device-Id,Access-Control-Allow-Origin'
spec:
  rules:
    - host: api.posts.com
      http:
        paths:
          - path: /product/?(.*)
            pathType: Prefix
            backend:
              service:
                name: product-srv
                port:
                  number: 3000
          - path: /shop/?(.*)
            pathType: Prefix
            backend:
              service:
                name: shop-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
